profilelist1exp/unpackaged/objects/Services_Account__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Services Accounts</relationshipLabel>
        <relationshipName>Services_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Affinity_Account_ID__c</fullName>
        <formula>TRIM(Account__r.Account_ID__c)</formula>
        <label>Affinity Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BAA_Auto_Renew__c</fullName>
        <label>BAA Auto-Renew</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BAA_End_Date__c</fullName>
        <label>BAA End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BAA_StartDate__c</fullName>
        <label>BAA Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Backup_Vendor__c</fullName>
        <label>Backup Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EMC Networker</fullName>
                </value>
                <value>
                    <fullName>Bridgehead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bed_Size__c</fullName>
        <label>Bed Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Annual_Revenue__c</fullName>
        <description>Client revenue to be received each year in an executed contract</description>
        <inlineHelpText>Enter the annual revenue the client books</inlineHelpText>
        <label>Client Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Status__c</fullName>
        <label>Credit Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit OK</fullName>
                </value>
                <value>
                    <fullName>Credit Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dell_Services_Industry__c</fullName>
        <description>SOM R15.07 – This field show same value as Dell Services Industry in Account object</description>
        <formula>Account__r.Dell_Services_Industry__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Dell Services Industry is the alignment of Accounts to Verticals as established by Services Sales Leadership.</inlineHelpText>
        <label>Dell Services Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_Chain__c</fullName>
        <label>Hospital Chain</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adventist Health</fullName>
                </value>
                <value>
                    <fullName>Affinity - Ministry</fullName>
                </value>
                <value>
                    <fullName>Akron General Health System</fullName>
                </value>
                <value>
                    <fullName>Alexian Brothers</fullName>
                </value>
                <value>
                    <fullName>Alliance</fullName>
                </value>
                <value>
                    <fullName>American MedTrust</fullName>
                </value>
                <value>
                    <fullName>Ancilla</fullName>
                </value>
                <value>
                    <fullName>Ascension /PtCt Only</fullName>
                </value>
                <value>
                    <fullName>Ascension Health</fullName>
                </value>
                <value>
                    <fullName>Associated Hospitals</fullName>
                </value>
                <value>
                    <fullName>Atlantic Health Sciences Corporation</fullName>
                </value>
                <value>
                    <fullName>Augusta</fullName>
                </value>
                <value>
                    <fullName>Avalon Healthcare</fullName>
                </value>
                <value>
                    <fullName>Avera Health</fullName>
                </value>
                <value>
                    <fullName>Baylor</fullName>
                </value>
                <value>
                    <fullName>Baylor Health Care System</fullName>
                </value>
                <value>
                    <fullName>Beausejour Hospital</fullName>
                </value>
                <value>
                    <fullName>Benefis Healthcare</fullName>
                </value>
                <value>
                    <fullName>Berkshire Health System</fullName>
                </value>
                <value>
                    <fullName>Beth Israel Medical Center</fullName>
                </value>
                <value>
                    <fullName>Bethany Methodist Corporation</fullName>
                </value>
                <value>
                    <fullName>Bethesda/Good Samaritan</fullName>
                </value>
                <value>
                    <fullName>Blackrock Medical Partners</fullName>
                </value>
                <value>
                    <fullName>Blanchard Valley Hospital</fullName>
                </value>
                <value>
                    <fullName>Blue Mountain Health</fullName>
                </value>
                <value>
                    <fullName>Bluewater Health</fullName>
                </value>
                <value>
                    <fullName>Brant Community Healthcare</fullName>
                </value>
                <value>
                    <fullName>Brim</fullName>
                </value>
                <value>
                    <fullName>Calgary Health Region</fullName>
                </value>
                <value>
                    <fullName>Cambridge Health Alliance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JSITE_Auto_Renew__c</fullName>
        <label>JSITE Auto-Renew</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JSITE_EndDate__c</fullName>
        <label>JSITE End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JSITE_Start_Date__c</fullName>
        <label>JSITE Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Link_to_Account_in_SHARE__c</fullName>
        <description>URL to sharepoint containing addition account information</description>
        <label>Link to Account in SHARE</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MEDITECH_Rep__c</fullName>
        <label>MEDITECH Rep</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPA_Auto_Renew__c</fullName>
        <label>MPA Auto-Renew</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MPA_EndDate__c</fullName>
        <label>MPA End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPA_StartDate__c</fullName>
        <label>MPA Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MSGNum__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>This value is the &quot;Customer Number&quot; on MSG Goldmine system. This is to help reference Accounts which were mapped during the initial MSG data migration. For any new Accounts created/mapped later, this field will be blank.</inlineHelpText>
        <label>MSGNum</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MSG_Account__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MSG Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSITE_Auto_Renew__c</fullName>
        <label>MSITE Auto-Renew</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MSITE_EndDate__c</fullName>
        <label>MSITE End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MSITE_Start_Date__c</fullName>
        <label>MSITE Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meditech_Platform__c</fullName>
        <label>Meditech Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Magic</fullName>
                </value>
                <value>
                    <fullName>Client/Server</fullName>
                </value>
                <value>
                    <fullName>6.x</fullName>
                </value>
                <value>
                    <fullName>Continuing Care</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>LSS – MPM Suite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meditech_Version__c</fullName>
        <label>Meditech Version</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Meditech_Platform__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>5.4</fullName>
                </value>
                <value>
                    <fullName>5.5</fullName>
                </value>
                <value>
                    <fullName>5.53</fullName>
                </value>
                <value>
                    <fullName>5.54</fullName>
                </value>
                <value>
                    <fullName>5.55</fullName>
                </value>
                <value>
                    <fullName>5.56</fullName>
                </value>
                <value>
                    <fullName>5.57</fullName>
                </value>
                <value>
                    <fullName>5.6</fullName>
                </value>
                <value>
                    <fullName>5.61</fullName>
                </value>
                <value>
                    <fullName>5.62</fullName>
                </value>
                <value>
                    <fullName>5.63</fullName>
                </value>
                <value>
                    <fullName>5.64</fullName>
                </value>
                <value>
                    <fullName>5.65</fullName>
                </value>
                <value>
                    <fullName>6.0</fullName>
                </value>
                <value>
                    <fullName>6.03</fullName>
                </value>
                <value>
                    <fullName>6.04</fullName>
                </value>
                <value>
                    <fullName>6.05</fullName>
                </value>
                <value>
                    <fullName>6.11</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meets_Services_NPS_Requirements__c</fullName>
        <inlineHelpText>For Services Customer Experience Use Only</inlineHelpText>
        <label>Meets Services NPS Requirements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NPS_Primary_Point_of_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Services account team member assigned as Primary POC for all NPS activities</inlineHelpText>
        <label>NPS Primary Point of Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Services_Accounts7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NPS_Segment_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>For Services Customer Experience Use Only</inlineHelpText>
        <label>NPS Segment Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Services_Accounts8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Primary_Apps_CDE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Apps CDE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Services_Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_BPO_CDE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary BPO CDE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Services_Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_CE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Client Exec on the account</description>
        <inlineHelpText>Select Primary Client Exec if account status is current</inlineHelpText>
        <label>Primary CE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Services_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_ICC_CDE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary ICC CDE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Services_Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Security_CDE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Security CDE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Services_Accounts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Support_CDE_TAM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Support CDE (TAM)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Services_Accounts6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MSG_Account__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Customer/MEDITECH Install</fullName>
                </value>
                <value>
                    <fullName>Customer/Non-MEDITECH</fullName>
                </value>
                <value>
                    <fullName>Customer/MEDITECH Prospect</fullName>
                </value>
                <value>
                    <fullName>Non-Customer/MEDITECH Install</fullName>
                </value>
                <value>
                    <fullName>Non-Customer/Non-MEDITECH</fullName>
                </value>
                <value>
                    <fullName>Non-Customer/MEDITECH Prospect</fullName>
                </value>
                <value>
                    <fullName>To be defined</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Channel</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMI_ID__c</fullName>
        <description>SOM R15.07 – This field show same value as SMI ID in Account object</description>
        <formula>Account__r.SMI_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>SMI ID is a unique identifier used to support Services’ go-to-market strategy.</inlineHelpText>
        <label>SMI ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_CE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Secondary Client Exec</description>
        <inlineHelpText>Enter the secondary client exec</inlineHelpText>
        <label>Secondary CE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Services_Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Server_Vendor__c</fullName>
        <label>Server Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>Dell</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>Stratus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Account_Name__c</fullName>
        <label>Service Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Account_Status__c</fullName>
        <description>State of the Dell Services Account</description>
        <inlineHelpText>Dell Perot Systems Account State</inlineHelpText>
        <label>Service Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Account__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates account migrated from Perot Legacy</description>
        <inlineHelpText>Select to indicate a Perot Legacy Account</inlineHelpText>
        <label>Service Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Services_Account_Category__c</fullName>
        <description>SOM R15.07 – This field show same value as Services Account Category in Account object</description>
        <formula>Account__r.Services_Account_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Services Account Category displays Services&apos; categorization of accounts in support of Services&apos; go-to-market strategy.</inlineHelpText>
        <label>Services Account Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Account_Health_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SOM R15.3 – Populate by trigger in Services Account when Services Account Health is edited</description>
        <label>Services Account Health Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Services_Accounts9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Services_Account_Health_Modified_Date__c</fullName>
        <description>SOM R15.3 – Populate by trigger in Services Account when Services Account Health is edited</description>
        <label>Services Account Health Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Services_Account_Health__c</fullName>
        <description>SOM R15.3 – Services Account Health</description>
        <inlineHelpText>This field is an indicator of overall account health for large CE-led service accounts, and can be overridden by the PEG and/or GAT teams. Select Red to indicate potentially significant delivery or customer experience issues such as Legal or Credit Hold</inlineHelpText>
        <label>Services Account Health</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Services_Annual_Revenue_Goal__c</fullName>
        <description>Annual revenue goal for services that aren’t guaranteed</description>
        <label>Services Annual Revenue Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Services_NPS_Participation__c</fullName>
        <inlineHelpText>For Services Customer Experience Use Only</inlineHelpText>
        <label>Services NPS Participation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Include</fullName>
                </value>
                <value>
                    <fullName>Exclude</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Services_Operating_Segment__c</fullName>
        <description>Operating Segment providing the service</description>
        <label>Services Operating Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BFSI&amp;DA</fullName>
                </value>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>HCLS</fullName>
                </value>
                <value>
                    <fullName>MRL&amp;E</fullName>
                </value>
                <value>
                    <fullName>TT&amp;H</fullName>
                </value>
                <value>
                    <fullName>LOB Managed - Apps</fullName>
                </value>
                <value>
                    <fullName>LOB Managed - BPO</fullName>
                </value>
                <value>
                    <fullName>LOB Managed - I&amp;CC</fullName>
                </value>
                <value>
                    <fullName>To Be Reviewed</fullName>
                </value>
                <value>
                    <fullName>No Longer a Services Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_Vendor__c</fullName>
        <label>Storage Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>Dell</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>EMC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Services Account</label>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Service Account Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BAAStartDate_shouldnt_greater_BAAEndDate</fullName>
        <active>true</active>
        <description>The BAA Start Date should not be after BAA End Date.</description>
        <errorConditionFormula>BAA_StartDate__c  &gt;  BAA_End_Date__c</errorConditionFormula>
        <errorDisplayField>BAA_StartDate__c</errorDisplayField>
        <errorMessage>The BAA Start Date should not be after BAA End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_BAAAutoRenew_Selected_Dates_Reqrd</fullName>
        <active>true</active>
        <description>If BAA Auto-Renew is set to &quot;Yes&quot; or &quot;No&quot;, the corresponding Start Date and End Date must be filled</description>
        <errorConditionFormula>AND(OR(ISBLANK(BAA_StartDate__c),ISBLANK( BAA_End_Date__c)),NOT(ISPICKVAL(BAA_Auto_Renew__c,&quot;&quot;)))</errorConditionFormula>
        <errorDisplayField>BAA_Auto_Renew__c</errorDisplayField>
        <errorMessage>If BAA Auto-Renew is set to &quot;Yes&quot; or &quot;No&quot;, the corresponding Start Date and End Date must be filled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_JSITEAutoRenew_Selected_Dates_Reqrd</fullName>
        <active>true</active>
        <description>If JSITE Auto-Renew is set to &quot;Yes&quot; or &quot;No&quot;, the corresponding Start Date and End Date must be filled</description>
        <errorConditionFormula>AND(OR(ISBLANK(JSITE_Start_Date__c),ISBLANK(JSITE_EndDate__c)),NOT(ISPICKVAL(JSITE_Auto_Renew__c,&quot;&quot;)))</errorConditionFormula>
        <errorDisplayField>JSITE_Auto_Renew__c</errorDisplayField>
        <errorMessage>If JSITE Auto-Renew is set to &quot;Yes&quot; or &quot;No&quot;, the corresponding Start Date and End Date must be filled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_MPAAutoRenew_Selected_Dates_Reqrd</fullName>
        <active>true</active>
        <description>If MPA Auto-Renew is set to &quot;Yes&quot; or &quot;No&quot;, the corresponding Start Date and End Date must be filled</description>
        <errorConditionFormula>AND(OR(ISBLANK(MPA_StartDate__c),ISBLANK(MPA_EndDate__c)),NOT(ISPICKVAL(MPA_Auto_Renew__c,&quot;&quot;)))</errorConditionFormula>
        <errorDisplayField>MPA_Auto_Renew__c</errorDisplayField>
        <errorMessage>If MPA Auto-Renew is set to &quot;Yes&quot; or &quot;No&quot;, the corresponding Start Date and End Date must be filled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_MSITEAutoRenew_Selected_Dates_Reqrd</fullName>
        <active>true</active>
        <description>If MSITE Auto-Renew is set to &quot;Yes&quot; or &quot;No&quot;, the corresponding Start Date and End Date must be filled</description>
        <errorConditionFormula>AND(OR(ISBLANK(MSITE_Start_Date__c),ISBLANK(MSITE_EndDate__c)),NOT(ISPICKVAL(MSITE_Auto_Renew__c,&quot;&quot;)))</errorConditionFormula>
        <errorDisplayField>MSITE_Auto_Renew__c</errorDisplayField>
        <errorMessage>If MSITE Auto-Renew is set to &quot;Yes&quot; or &quot;No&quot;, the corresponding Start Date and End Date must be filled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>JSITEStartDate_shdnt_greater_JSITEEndDat</fullName>
        <active>true</active>
        <description>The JSITE Start Date should not be after JSITE End Date.</description>
        <errorConditionFormula>JSITE_Start_Date__c  &gt;  JSITE_EndDate__c</errorConditionFormula>
        <errorDisplayField>JSITE_Start_Date__c</errorDisplayField>
        <errorMessage>The JSITE Start Date should not be after JSITE End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MPAStartDate_shouldnt_greater_MPAEndDate</fullName>
        <active>true</active>
        <description>The MPA Start Date should not be after MPA End Date.</description>
        <errorConditionFormula>MPA_StartDate__c  &gt;  MPA_EndDate__c</errorConditionFormula>
        <errorDisplayField>MPA_StartDate__c</errorDisplayField>
        <errorMessage>The MPA Start Date should not be after MPA End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MSITEStartDate_shdnt_greater_MSITEEndDat</fullName>
        <active>true</active>
        <description>The MSITE Start Date should not be after MSITE End Date.</description>
        <errorConditionFormula>MSITE_Start_Date__c  &gt;  MSITE_EndDate__c</errorConditionFormula>
        <errorDisplayField>MSITE_Start_Date__c</errorDisplayField>
        <errorMessage>The MSITE Start Date should not be after MSITE End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Service_Account_Status_Req_fields</fullName>
        <active>false</active>
        <errorConditionFormula>AND (ISPICKVAL (Service_Account_Status__c, &quot;Current&quot;), 
  ISBLANK (Client_Annual_Revenue__c)
)</errorConditionFormula>
        <errorMessage>Client Account Revenue is Required if Account Status is Current.</errorMessage>
    </validationRules>
</CustomObject>